--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 </head>
 <body>
   <div class="start-screen">
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="logoo.png" alt="Logo" class="logo">
     <h1>Swipe left or right!</h1>
     <button class="start-button" onclick="startQuiz()">Los geht’s!</button>
   </div>
@@ -474,7 +474,7 @@ function notifyTeacherTestStarted() {
 
   const params = new URLSearchParams({
     secret: SECRET,
-    studentName: "Olena",
+    studentName: "Sony C1",
     eventType: "start",
     quizTitle: document.title,
     pageUrl: window.location.href,
