--- a/index.html
+++ b/index.html
@@ -266,8 +266,134 @@
 
 
 const questions =
-[
 
+[
+    { "text": "Dieser Test startet mit den Vokabeln aus unserem Lesetext: Pro & Contra --> Entschuldigungen.", "options": ["Los geht's!", "____"], "correct": 0 },
+  { "text": "Was bedeutet „Konvention“?", "options": ["allgemein anerkannte Regel oder gesellschaftliche Übereinkunft", "persönliche Meinung ohne Verbindlichkeit"], "correct": 0 },
+  { "text": "In diesem Land ist es eine soziale ___, sich formell zu begrüßen.", "options": ["Konvention", "Konsequenz"], "correct": 0 },
+
+  { "text": "Was bedeutet „missachten“?", "options": ["bewusst nicht respektieren", "sorgfältig beachten"], "correct": 0 },
+  { "text": "Wer Regeln bewusst ___, riskiert Konflikte.", "options": ["missachtet", "beachtet"], "correct": 0 },
+
+  { "text": "Was bedeutet „unterlaufen“ (Fehler)?", "options": ["unbeabsichtigt passieren", "absichtlich verursachen"], "correct": 0 },
+  { "text": "Bei der Abrechnung ist mir ein Fehler ___ .", "options": ["unterlaufen", "untergangen"], "correct": 0 },
+
+  { "text": "Was bedeutet „bereinigen“?", "options": ["klären und ordnen", "verschärfen"], "correct": 0 },
+  { "text": "Wir sollten die Angelegenheit zeitnah ___ .", "options": ["bereinigen", "belasten"], "correct": 0 },
+
+  { "text": "Was ist ein Schuldeingeständnis?", "options": ["das offene Zugeben von Schuld", "das Vermeiden von Verantwortung"], "correct": 0 },
+  { "text": "Sein ___ wurde positiv aufgenommen.", "options": ["Schuldeingeständnis", "Schuldvorwurf"], "correct": 0 },
+
+  { "text": "Wer ist ein Beteiligter?", "options": ["eine Person, die in etwas involviert ist", "eine außenstehende Person"], "correct": 0 },
+  { "text": "Alle ___ wurden zu dem Gespräch eingeladen.", "options": ["Beteiligten", "Beobachter"], "correct": 0 },
+
+  { "text": "Was bedeutet „die Fülle“?", "options": ["große Menge", "Mangel"], "correct": 0 },
+  { "text": "Er äußerte eine ___ von Ideen.", "options": ["Fülle", "Leere"], "correct": 0 },
+
+  { "text": "Was bedeutet „Balsam“ im übertragenen Sinn?", "options": ["etwas Wohltuendes", "etwas Kränkendes"], "correct": 0 },
+  { "text": "Ihre Worte waren wie ein ___ für ihn.", "options": ["Balsam", "Vorwurf"], "correct": 0 },
+
+  { "text": "Was bedeutet „Miteinander“?", "options": ["gemeinsames, respektvolles Zusammenleben", "Konkurrenzdenken"], "correct": 0 },
+  { "text": "Ein gutes ___ ist im Team entscheidend.", "options": ["Miteinander", "Gegeneinander"], "correct": 0 },
+
+  { "text": "Was bedeutet „zwischenmenschlich“?", "options": ["Beziehungen zwischen Menschen betreffend", "technisch-organisatorisch"], "correct": 0 },
+  { "text": "Kommunikation ist eine ___ Fähigkeit.", "options": ["zwischenmenschliche", "mathematische"], "correct": 0 },
+
+  { "text": "Was ist das Betriebsklima?", "options": ["Atmosphäre am Arbeitsplatz", "wirtschaftliche Lage des Betriebs"], "correct": 0 },
+  { "text": "Ein schlechtes ___ senkt die Motivation.", "options": ["Betriebsklima", "Betriebsergebnis"], "correct": 0 },
+
+  { "text": "Was bedeutet „besänftigen“?", "options": ["beruhigen", "provozieren"], "correct": 0 },
+  { "text": "Er versuchte, die Situation zu ___ .", "options": ["besänftigen", "verschärfen"], "correct": 0 },
+
+  { "text": "Was bezeichnet „das Gegenüber“?", "options": ["die andere Person im Gespräch", "einen neutralen Beobachter"], "correct": 0 },
+  { "text": "Man sollte das ___ ernst nehmen.", "options": ["Gegenüber", "Publikum"], "correct": 0 },
+
+  { "text": "Was bedeutet „Versöhnung“?", "options": ["Wiederherstellung des Friedens", "endgültige Trennung"], "correct": 0 },
+  { "text": "Nach dem Streit kam es zur ___ .", "options": ["Versöhnung", "Eskalation"], "correct": 0 },
+
+  { "text": "Was ist ein Mitmensch?", "options": ["ein anderer Mensch in der Gemeinschaft", "ein enger Verwandter"], "correct": 0 },
+  { "text": "Respekt gegenüber dem ___ ist wichtig.", "options": ["Mitmenschen", "Gegner"], "correct": 0 },
+
+  { "text": "Was ist ein Lichtblick?", "options": ["etwas Hoffnungsvolles", "eine Enttäuschung"], "correct": 0 },
+  { "text": "Die Entschuldigung war ein echter ___ .", "options": ["Lichtblick", "Rückschlag"], "correct": 0 },
+
+  { "text": "Was bedeutet „gnadenlos“?", "options": ["ohne Nachsicht", "verständnisvoll"], "correct": 0 },
+  { "text": "Er ging ___ mit Fehlern um.", "options": ["gnadenlos", "nachsichtig"], "correct": 0 },
+
+  { "text": "Was ist Perfektionismus?", "options": ["übertriebener Anspruch an Fehlerlosigkeit", "Gleichgültigkeit gegenüber Qualität"], "correct": 0 },
+  { "text": "Sein ___ setzt ihn unter Druck.", "options": ["Perfektionismus", "Pragmatismus"], "correct": 0 },
+
+  { "text": "Was bedeutet „erweisen“?", "options": ["zeigen, zukommen lassen", "vermeiden"], "correct": 0 },
+  { "text": "Man sollte anderen Respekt ___ .", "options": ["erweisen", "entziehen"], "correct": 0 },
+
+  { "text": "Was bedeutet „wertschätzen“?", "options": ["anerkennen", "ignorieren"], "correct": 0 },
+  { "text": "Ihre Arbeit wird sehr ___ .", "options": ["wertgeschätzt", "unterschätzt"], "correct": 0 },
+
+  { "text": "Was bedeutet „sich bewusst sein“?", "options": ["etwas klar erkennen", "etwas vergessen"], "correct": 0 },
+  { "text": "Er ist sich der Folgen nicht ___ .", "options": ["bewusst", "sicher"], "correct": 0 },
+
+  { "text": "Was bedeutet „ein gewisses Maß“?", "options": ["begrenzte Menge", "völlige Abwesenheit"], "correct": 0 },
+  { "text": "Kritik sollte ein ___ nicht überschreiten.", "options": ["Maß", "Ziel"], "correct": 0 },
+
+  { "text": "Was ist Selbstreflexion?", "options": ["Nachdenken über eigenes Verhalten", "Bewertung anderer"], "correct": 0 },
+  { "text": "Selbstkritik erfordert ___ .", "options": ["Selbstreflexion", "Selbstüberschätzung"], "correct": 0 },
+
+  { "text": "Was bedeutet „somit“?", "options": ["folglich", "trotzdem"], "correct": 0 },
+  { "text": "Er hat sich entschuldigt und ___ Verantwortung übernommen.", "options": ["somit", "dennoch"], "correct": 0 },
+
+  { "text": "Was ist Einfühlungsvermögen?", "options": ["Fähigkeit, Gefühle anderer zu verstehen", "Durchsetzungsfähigkeit"], "correct": 0 },
+  { "text": "Führungskräfte brauchen viel ___ .", "options": ["Einfühlungsvermögen", "Dominanz"], "correct": 0 },
+
+  { "text": "Was bedeutet „mittels“?", "options": ["durch / mithilfe von", "trotz"], "correct": 0 },
+  { "text": "___ einer Entschuldigung kann man Vertrauen aufbauen.", "options": ["Mittels", "Wegen"], "correct": 0 },
+
+  { "text": "Was bedeutet „geradestehen für“?", "options": ["Verantwortung übernehmen", "Schuld abweisen"], "correct": 0 },
+  { "text": "Er ist bereit, für seinen Fehler ___ .", "options": ["geradezustehen", "auszuweichen"], "correct": 0 },
+
+  { "text": "Was bedeutet „ausgleichen“?", "options": ["wieder ins Gleichgewicht bringen", "verstärken"], "correct": 0 },
+  { "text": "Der Schaden wurde finanziell ___ .", "options": ["ausgeglichen", "vergrößert"], "correct": 0 },
+
+  { "text": "Was bedeutet „eingestehen“?", "options": ["offen zugeben", "leugnen"], "correct": 0 },
+  { "text": "Er konnte seinen Fehler nicht ___ .", "options": ["eingestehen", "vertuschen"], "correct": 0 },
+
+  { "text": "Was bedeutet „Bedauern“?", "options": ["Ausdruck von Mitgefühl", "Rechtfertigung"], "correct": 0 },
+  { "text": "Er äußerte tiefes ___ .", "options": ["Bedauern", "Misstrauen"], "correct": 0 },
+
+  { "text": "Was bedeutet „Reue“?", "options": ["ehrliches Schuldbewusstsein", "Gleichgültigkeit"], "correct": 0 },
+  { "text": "Er zeigte aufrichtige ___ .", "options": ["Reue", "Ablehnung"], "correct": 0 },
+
+  { "text": "Was bedeutet „Hochachtung“?", "options": ["großer Respekt", "Angst"], "correct": 0 },
+  { "text": "Ihr Verhalten verdient ___ .", "options": ["Hochachtung", "Kritik"], "correct": 0 },
+
+  { "text": "Was bedeutet „im Vordergrund stehen“?", "options": ["besonders wichtig sein", "ignoriert werden"], "correct": 0 },
+  { "text": "Hier steht der Mensch im ___ .", "options": ["Vordergrund", "Hintergrund"], "correct": 0 },
+
+  { "text": "Was bedeutet „übermäßig“?", "options": ["zu stark", "angemessen"], "correct": 0 },
+  { "text": "Er reagierte ___ emotional.", "options": ["übermäßig", "kontrolliert"], "correct": 0 },
+
+  { "text": "Was bedeutet „schwerwiegend“?", "options": ["ernsthafte Folgen habend", "belanglos"], "correct": 0 },
+  { "text": "Das war ein ___ Fehler.", "options": ["schwerwiegender", "kleiner"], "correct": 0 },
+
+  { "text": "Was bedeutet „zeugen von“?", "options": ["Ausdruck sein für", "widersprechen"], "correct": 0 },
+  { "text": "Sein Verhalten ___ Reife.", "options": ["zeugt von", "mangelt an"], "correct": 0 },
+
+  { "text": "Was bedeutet „mangeln an“?", "options": ["nicht genug haben", "im Überfluss besitzen"], "correct": 0 },
+  { "text": "Ihm ___ Selbstvertrauen.", "options": ["mangelt an", "fehlt wegen"], "correct": 0 },
+
+  { "text": "Was ist ein Minderwertigkeitsgefühl?", "options": ["Gefühl der Unterlegenheit", "Selbstzufriedenheit"], "correct": 0 },
+  { "text": "Kritik verstärkte sein ___ .", "options": ["Minderwertigkeitsgefühl", "Selbstbewusstsein"], "correct": 0 },
+
+  { "text": "Was bedeutet „zurückweisen“?", "options": ["ablehnen", "akzeptieren"], "correct": 0 },
+  { "text": "Er ___ die Entschuldigung.", "options": ["wies zurück", "nahm an"], "correct": 0 },
+
+  { "text": "Was bedeutet „letztlich“?", "options": ["am Ende", "zufällig"], "correct": 0 },
+  { "text": "___ zählt die Ehrlichkeit.", "options": ["Letztlich", "Nebenbei"], "correct": 0 },
+
+  { "text": "Was bedeutet „konstruktiv“?", "options": ["lösungsorientiert", "destruktiv"], "correct": 0 },
+  { "text": "Das Gespräch verlief ___ .", "options": ["konstruktiv", "verletzend"], "correct": 0 },
+
+  { "text": "Was bedeutet „ratsam“?", "options": ["empfehlenswert", "unnötig"], "correct": 0 },
+  { "text": "In diesem Fall ist es ___, sich zu entschuldigen.", "options": ["ratsam", "riskant"], "correct": 0 },
   { "text": "sich etwas vornehmen", "options": ["to forget something", "to resolve / plan to do something"], "correct": 1 },
   { "text": "Vorsätze", "options": ["resolutions", "mistakes"], "correct": 0 },
   { "text": "umsetzen", "options": ["to cancel", "to implement"], "correct": 1 },
