Update quiz questions and options in index.html

--- a/index.html
+++ b/index.html
@@ -269,236 +269,184 @@ const questions =
 
 
 [
-  { "text": "gesellig", "options": ["sociable", "lonely"], "correct": 0 },
-
+  
   {
-    "text": "Das ist ein ___ Spiel.",
-    "options": ["gesellig", "geselliges"],
+    "text": "etwas erledigen",
+    "options": ["to delay something", "to get something done"],
     "correct": 1
   },
-
-  { "text": "der Führerschein", "options": ["driving licence", "passport"], "correct": 0 },
-
   {
-    "text": "Daphne macht gerade ___ Führerschein.",
-    "options": ["ihren", "ihr"],
+    "text": "die Abbuchung",
+    "options": ["the withdrawal / debit", "the payment receipt"],
     "correct": 0
   },
-
   {
-    "text": "Sie steht kurz vor ___ praktischen Prüfung.",
-    "options": ["ihre", "ihrer"],
+    "text": "das Heidentum",
+    "options": ["paganism", "Christianity"],
+    "correct": 0
+  },
+  {
+    "text": "die Konvention",
+    "options": ["tradition / social norm", "invention"],
+    "correct": 0
+  },
+  {
+    "text": "missachten",
+    "options": ["to respect", "to ignore"],
     "correct": 1
   },
-
-  { "text": "der Tunnelblick", "options": ["tunnel vision", "short break"], "correct": 0 },
-
-  { "text": "verheiratet", "options": ["married", "divorced"], "correct": 0 },
-
   {
-    "text": "Wir sind noch nicht lange ___.",
-    "options": ["verheiratet", "heiraten"],
+    "text": "Mir ist ein Fehler ___.",
+    "options": ["untergelaufen", "unterlaufen"],
     "correct": 0
   },
-
   {
-    "text": "ein großes Ding daraus machen",
-    "options": ["to make a big deal out of it", "to ignore something"],
+    "text": "bereinigen",
+    "options": ["to confuse", "to clarify / resolve"],
+    "correct": 1
+  },
+  {
+    "text": "eine Angelegenheit bereinigen",
+    "options": ["to make a matter worse", "to settle / clear up a matter"],
+    "correct": 1
+  },
+  {
+    "text": "das Schuldeingeständnis",
+    "options": ["accusation", "admission of guilt"],
+    "correct": 1
+  },
+  {
+    "text": "der / die Beteiligte",
+    "options": ["person involved", "bystander"],
     "correct": 0
   },
-
   {
-    "text": "Sie wollten kein großes Ding daraus ___.",
-    "options": ["machen", "gemacht"],
+    "text": "die Fülle",
+    "options": ["lack", "abundance"],
+    "correct": 1
+  },
+  {
+    "text": "der Balsam (Seine Worte waren ein echter Balsam für sie.)",
+    "options": ["der Balsam: pain", "der Balsam: relief"],
+    "correct": 1
+  },
+  {
+    "text": "das Miteinander",
+    "options": ["coexistence", "conflict"],
     "correct": 0
   },
-
   {
-    "text": "etwas an die große Glocke hängen",
-    "options": ["to make something public", "to forget something"],
+    "text": "zwischenmenschlich",
+    "options": ["technical", "interpersonal"],
+    "correct": 1
+  },
+  {
+    "text": "das Betriebsklima",
+    "options": ["working atmosphere", "weather conditions"],
     "correct": 0
   },
-
   {
-    "text": "___ Dänemark dauert es zwei Monate.",
-    "options": ["In", "Auf"],
+    "text": "besänftigen",
+    "options": ["to calm someone down", "to provoke"],
     "correct": 0
   },
-
   {
-    "text": "ohne lange Wartezeiten",
-    "options": ["without long waiting times", "without problems"],
+    "text": "das Gegenüber",
+    "options": ["colleague", "person opposite / counterpart"],
+    "correct": 1
+  },
+  {
+    "text": "die Versöhnung",
+    "options": ["punishment", "reconciliation"],
+    "correct": 1
+  },
+  {
+    "text": "der Mitmensch",
+    "options": ["fellow human being", "enemy"],
     "correct": 0
   },
-
   {
-    "text": "etwas eingestehen",
-    "options": ["to admit something", "to deny something"],
+    "text": "der Lichtblick",
+    "options": ["disappointment", "ray of hope"],
+    "correct": 1
+  },
+  {
+    "text": "gnadenlos",
+    "options": ["merciless", "generous"],
     "correct": 0
   },
-
   {
-    "text": "das Eingeständnis",
-    "options": ["confession / admission", "excuse"],
+    "text": "der Perfektionismus",
+    "options": ["perfectionism", "laziness"],
     "correct": 0
   },
-
   {
-    "text": "jemanden betrügen",
-    "options": ["to cheat on someone", "to support someone"],
+    "text": "Wir ___ einer Person Respekt.",
+    "options": ["erweisen", "erweisen uns"],
     "correct": 0
   },
-
   {
-    "text": "Er hat ihre Mutter ___.",
-    "options": ["betrogen", "betrügen"],
+    "text": "wertschätzen",
+    "options": ["to underestimate", "to appreciate"],
+    "correct": 1
+  },
+  {
+    "text": "Er ist sich bewusst, ___ sein Handeln Konsequenzen hat.",
+    "options": ["ob", "dass"],
+    "correct": 1
+  },
+  {
+    "text": "Ich lerne jeden Tag Deutsch, ___ ich große Fortschritte mache.",
+    "options": ["wodurch", "indem"],
     "correct": 0
   },
-
   {
-    "text": "jemanden austricksen",
-    "options": ["to trick someone", "to help someone"],
+    "text": "___ ich regelmäßig übe, lerne ich effektiver.",
+    "options": ["Dadurch", "Indem"],
+    "correct": 1
+  },
+  {
+    "text": "Eine Entschuldigung kann helfen. ___ können beide Seiten wieder zueinander finden.",
+    "options": ["Trotzdem", "Dadurch"],
+    "correct": 1
+  },
+  {
+    "text": "Man kann ___ einer Entschuldigung viel erreichen.",
+    "options": ["mithilfe", "wegen"],
     "correct": 0
   },
-
   {
-    "text": "Sie wurde von einem Betrüger ___.",
-    "options": ["ausgetrickst", "austricksen"],
+    "text": "die BRD",
+    "options": ["Federal Republic of Germany (West)", "German Democratic Republic"],
     "correct": 0
   },
-
   {
-    "text": "der Trickbetrüger",
-    "options": ["scammer / con artist", "police officer"],
+    "text": "die DDR",
+    "options": ["Western Germany", "German Democratic Republic (East)"],
+    "correct": 1
+  },
+  {
+    "text": "Die Staaten waren politisch ___.",
+    "options": ["verbunden", "verbündet"],
+    "correct": 1
+  },
+  {
+    "text": "Die Grenze wurde ___.",
+    "options": ["geöffnet", "öffnen"],
     "correct": 0
   },
-
   {
-    "text": "gut im Schauspielern sein",
-    "options": ["to be good at acting", "to be good at singing"],
-    "correct": 0
+    "text": "der Fall der Mauer",
+    "options": ["construction of the wall", "fall of the wall"],
+    "correct": 1
   },
-
   {
-    "text": "Sie musste oft zur Bank gehen und Geld ___.",
-    "options": ["abheben", "abgehoben"],
-    "correct": 0
-  },
-
-  {
-    "text": "jemanden verkörpern",
-    "options": ["to impersonate someone", "to describe someone"],
-    "correct": 0
-  },
-
-  {
-    "text": "Es ist einfach, so zu tun, als ___ man jemand anderes.",
-    "options": ["wäre", "ist"],
-    "correct": 0
-  },
-
-  {
-    "text": "sich für jemanden ausgeben",
-    "options": ["to pretend to be someone else", "to introduce someone"],
-    "correct": 0
-  },
-
-  {
-    "text": "Geld anlegen",
-    "options": ["to invest money", "to spend money"],
-    "correct": 0
-  },
-
-  {
-    "text": "Geld investieren",
-    "options": ["to invest money", "to borrow money"],
-    "correct": 0
-  },
-
-  {
-    "text": "Wenn man viel Geld in eine Aktie ___, gibt es ein hohes Risiko.",
-    "options": ["anlegt", "anlegen"],
-    "correct": 0
-  },
-
-  {
-    "text": "ethisch",
-    "options": ["ethical", "illegal"],
-    "correct": 0
-  },
-
-  {
-    "text": "ein ethischer Ansatz",
-    "options": ["an ethical approach", "a financial trick"],
-    "correct": 0
-  },
-
-  {
-    "text": "sich an einem Gerät anmelden",
-    "options": ["to log in", "to turn off"],
-    "correct": 0
-  },
-
-  {
-    "text": "Geld auf die Seite legen",
-    "options": ["to save money", "to lose money"],
-    "correct": 0
-  },
-
-  {
-    "text": "auf der hohen Kante haben",
-    "options": ["to have savings", "to have debts"],
-    "correct": 0
-  },
-
-  {
-    "text": "ein neues Passwort anfordern",
-    "options": ["to request a new password", "to change a device"],
-    "correct": 0
-  },
-
-  {
-    "text": "gierig sein",
-    "options": ["to be greedy", "to be careful"],
-    "correct": 0
-  },
-
-  {
-    "text": "Man sollte nicht gierig sein, wenn die anderen ___ haben.",
-    "options": ["Angst", "angsten"],
-    "correct": 0
-  },
-
-  {
-    "text": "Es ist gut, in Firmen ___, die man kennt.",
-    "options": ["zu investieren", "investieren"],
-    "correct": 0
-  },
-
-  {
-    "text": "der richtige Zeitpunkt",
-    "options": ["the right time", "the wrong decision"],
-    "correct": 0
-  },
-
-  {
-    "text": "Investments automatisieren",
-    "options": ["to automate investments", "to cancel investments"],
-    "correct": 0
-  },
-
-  {
-    "text": "Geld hin und her schieben",
-    "options": ["to move money back and forth", "to save money regularly"],
-    "correct": 0
-  },
-
-  {
-    "text": "der ETF",
-    "options": ["exchange-traded fund", "private bank account"],
+    "text": "Das Gesetz ist in Kraft ___.",
+    "options": ["getreten", "gegangen"],
     "correct": 0
   }
 ]
+
 
 
 
