Add vocabulary entries for German lesson

--- a/index.html
+++ b/index.html
@@ -407,9 +407,188 @@ const questions =
     "options": ["spaziere", "spazieren"],
     "correct": 0
   },
+ {
+    "text": "Hier kommen noch mal die wichtigen Vokabeln aus der aktuellen Lektion ...",
+    "options": ["Los geht's!", "..."],
+    "correct": 0
+  },
+ {
+    "text": "der Mauerfall",
+    "options": ["fall of the Berlin Wall", "construction of the wall"],
+    "correct": 0
+  },
   {
-    "text": "kein Doom-Scrolling machen (in Social Media)",
-    "options": ["to doom-scroll",]()
+    "text": "der Mauerfall",
+    "options": ["fall of the Berlin Wall", "construction of the wall"],
+    "correct": 0
+  },
+  {
+    "text": "die Teilung",
+    "options": ["unity", "division"],
+    "correct": 1
+  },
+  {
+    "text": "die Wiedervereinigung",
+    "options": ["separation", "reunification"],
+    "correct": 1
+  },
+  {
+    "text": "der / die Verbündete",
+    "options": ["ally", "enemy"],
+    "correct": 0
+  },
+  {
+    "text": "sich zuwenden",
+    "options": ["to turn away from", "to turn toward"],
+    "correct": 1
+  },
+  {
+    "text": "der Ostblock",
+    "options": ["Eastern Bloc", "European Union"],
+    "correct": 0
+  },
+  {
+    "text": "der Lebensstandard",
+    "options": ["quality of life / living standard", "job contract"],
+    "correct": 0
+  },
+  {
+    "text": "innerdeutsch",
+    "options": ["international", "within Germany"],
+    "correct": 1
+  },
+  {
+    "text": "der Stacheldraht",
+    "options": ["barbed wire", "electric cable"],
+    "correct": 0
+  },
+  {
+    "text": "die Mine",
+    "options": ["helmet", "land mine"],
+    "correct": 1
+  },
+  {
+    "text": "abriegeln",
+    "options": ["to seal off", "to decorate"],
+    "correct": 0
+  },
+  {
+    "text": "die Lebensgefahr",
+    "options": ["danger to life", "daily routine"],
+    "correct": 0
+  },
+  {
+    "text": "die Auswanderung",
+    "options": ["immigration", "emigration"],
+    "correct": 1
+  },
+  {
+    "text": "konkurrierend",
+    "options": ["cooperating", "competing"],
+    "correct": 1
+  },
+  {
+    "text": "andauernd",
+    "options": ["temporary", "ongoing"],
+    "correct": 1
+  },
+  {
+    "text": "der Wettkampf",
+    "options": ["competition", "agreement"],
+    "correct": 0
+  },
+  {
+    "text": "der Zusammenbruch",
+    "options": ["collapse", "growth"],
+    "correct": 0
+  },
+  {
+    "text": "die Bezeichnung",
+    "options": ["description / term", "command"],
+    "correct": 0
+  },
+  {
+    "text": "teilweise",
+    "options": ["partially", "completely"],
+    "correct": 0
+  },
+  {
+    "text": "das Grundrecht",
+    "options": ["basic right", "basic duty"],
+    "correct": 0
+  },
+  {
+    "text": "verabschieden",
+    "options": ["to greet", "to say goodbye / pass (a law)"],
+    "correct": 1
+  },
+  {
+    "text": "die Ausreise",
+    "options": ["entry into a country", "departure from a country"],
+    "correct": 1
+  },
+  {
+    "text": "verkünden",
+    "options": ["to announce officially", "to hide"],
+    "correct": 0
+  },
+  {
+    "text": "die Grenze zu + Dat.",
+    "options": ["the border to", "the center of"],
+    "correct": 0
+  },
+  {
+    "text": "einreißen",
+    "options": ["to tear down", "to build up"],
+    "correct": 0
+  },
+  {
+    "text": "die Wende",
+    "options": ["political turning point", "weather change"],
+    "correct": 0
+  },
+  {
+    "text": "der Wandel",
+    "options": ["continuity", "change / transformation"],
+    "correct": 1
+  },
+  {
+    "text": "vereinigen",
+    "options": ["to divide", "to unite"],
+    "correct": 1
+  },
+  {
+    "text": "spürbar",
+    "options": ["noticeable", "imaginary"],
+    "correct": 0
+  },
+  {
+    "text": "im Hinblick auf + Akk.",
+    "options": ["with regard to", "instead of"],
+    "correct": 0
+  },
+  {
+    "text": "der Wohlstand",
+    "options": ["poverty", "prosperity"],
+    "correct": 1
+  },
+  {
+    "text": "der Zeitraum",
+    "options": ["period of time", "location"],
+    "correct": 0
+  },
+  {
+    "text": "abfällig",
+    "options": ["neutral", "derogatory"],
+    "correct": 1
+  },
+  {
+    "text": "die Selbstbezeichnung",
+    "options": ["self-designation", "foreign label"],
+    "correct": 0
+  }
+]
+
 
 
 ;
