--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ const questions =
   },
   {
     "text": "Ich schaue ___ gern Sport.",
-    "options": ["Sport", "gern Sport"],
+    "options": ["sehr", "lieber"],
     "correct": 0
   },
   {
